DSND-2876: Remove logger field (#66)
* DSND-2876: Remove logger field

* An injected Logger was still remaining that wasn't picked up by running the analyse PR job because this job only runs unit tests. I have removed the injected logger and updated the Makefile to run both unit and itests when the pipeline calls `make test-unit`.
* Run code cleanup.

* DSND-2876: Upgrade spring version in pom to pass dependency-check